tests/passes/well-formed/constant-external-cell.expect
---CODE---
1
---STDERR---
Error: tests/passes/well-formed/constant-external-cell.futil
7 |    external m = std_const(2,1);
  |             ^ Type Not Allowed: constant not allowed for external cells
